<resources>
    <string name="app_name">Test Autenticazione Firebase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="update_password">Update Password</string>
    <string name="logout">Logout</string>
    <string name="get_password">Get Password</string>
    <string name="back">Back</string>
</resources>